--- a/index.html
+++ b/index.html
@@ -222,11 +222,12 @@
                 <div class="row">
                     <div class="col-sm-6"></div>
                     <div class="col-sm-6">
-                        <div class="first-screen-cards">
-                            <h1>Let your dreams come true</h1>
-                            <p>Empowering Your Digital Transformation Journey. Discover the Future with Cutting-edge
-                                Solutions and Innovative Strategies. Me and My Team is Dedicated to Delivering
-                                Excellence in Every Step.</p>
+                        <div class="first-screen-cards minus-margin-top">
+                            <img src="assets/images/me.png" class="profile-picture">
+                            <h1>Who am i ?</h1>
+                            <p>
+                                I am 26 years old and I live in Bursa. For the past two years, I have been providing web software solutions to corporate companies through my own company, billing them accordingly. These solutions include store cash register inventory tracking, ERP, e-commerce, custom-designed websites, customer relationship management software, custom CMS, and more. I have a strong command of PHP, Java, and JavaScript languages, and I have intermediate-level proficiency in Python. Before establishing my own sole proprietorship, I also worked as a freelancer without invoicing for some projects, some of which were obtained through platforms like Bionluk, while others were acquired through local connections. I have been actively working in the industry for approximately 8 years. I have clients not only from Turkey but also from all around the world. I have an English proficiency level of C2.
+                            </p>
                             <div class="button-group">
                                 <a href="#" class="btn btn-primary">Get Contact</a>
                             </div>
