--- a/index.html
+++ b/index.html
@@ -238,16 +238,24 @@
             </div>
             <div class="container screens contact">
                 <div class="row">
-                    <div class="col-sm-6"></div>
                     <div class="col-sm-6">
                         <div class="first-screen-cards">
-                            <h1>Let your dreams come true</h1>
-                            <p>Empowering Your Digital Transformation Journey. Discover the Future with Cutting-edge
-                                Solutions and Innovative Strategies. Me and My Team is Dedicated to Delivering
-                                Excellence in Every Step.</p>
-                            <div class="button-group">
-                                <a href="#" class="btn btn-primary">Get Contact</a>
-                            </div>
+                            <h1>Contact me</h1>
+                            <p>
+                                <i>E-mail:</i> bulut.erol@icloud.com <br>
+                                <i>Phone:</i> +90 537 893 31 38 <br>
+                                
+                            </p>
+                            <div><b>OR</b></div>
+                            <form action="contact-submit.php" method="post">
+                                <input type="text" name="email" placeholder="Your email">
+                                <input type="text" name="phone" placeholder="Your phone number">
+                                <textarea name="message">Type your message here.</textarea>
+                                <div class="button-group">
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                </div>
+                            </form>
+                            
                         </div>
 
                     </div>
