--- a/index.html
+++ b/index.html
@@ -239,15 +239,15 @@
             <div class="container screens contact">
                 <div class="row">
                     <div class="col-sm-6">
-                        <div class="first-screen-cards">
+                        <div class="first-screen-cards minus-margin-top">
                             <h1>Contact me</h1>
                             <p>
-                                <i>E-mail:</i> bulut.erol@icloud.com <br>
-                                <i>Phone:</i> +90 537 893 31 38 <br>
+                                <i>E-mail:</i> <a href="mailto:contact@buluterol.dev">contact@buluterol.dev</a> <br>
+                                <i>Phone:</i> <a href="tel:905378933138">+90 537 893 31 38</a> <br>
                                 
                             </p>
                             <div><b>OR</b></div>
-                            <form action="contact-submit.php" method="post">
+                            <form action="contact-post.php" method="post">
                                 <input type="text" name="email" placeholder="Your email">
                                 <input type="text" name="phone" placeholder="Your phone number">
                                 <textarea name="message">Type your message here.</textarea>
