--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                 <button class="btn" onclick="goMenu('about',this)">About Me</button>
                 <button class="btn" id="contactBtn" onclick="goMenu('contact',this)">Contact</button>
             </nav>
+            <div class="navmenu-hamburger" onclick="openNav(this)">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </div>
 
     </header>
