--- a/index.html
+++ b/index.html
@@ -510,11 +510,18 @@
     </script>
     <script src="assets/functions.js"></script>
     <script>
+        if(screen.width > 1280) {
+            var swiperCount = 3;
+        } else if(screen.width < 1280 && screen.width > 400) {
+            var swiperCount = 2;
+        } else {
+            var swiperCount = 1;
+        }
         const swiper = new Swiper('.swiper1', {
             // Optional parameters
             direction: 'horizontal',
             loop: true,
-            slidesPerView: 3,
+            slidesPerView: swiperCount,
             spaceBetween: 30,
             // Navigation arrows
             navigation: {
@@ -528,7 +535,7 @@
             // Optional parameters
             direction: 'horizontal',
             loop: true,
-            slidesPerView: 3,
+            slidesPerView: swiperCount,
             spaceBetween: 30,
             // Navigation arrows
             navigation: {
