--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                             <form action="contact-post.php" method="post">
                                 <input type="text" name="email" placeholder="Your email">
                                 <input type="text" name="phone" placeholder="Your phone number">
-                                <textarea name="message">Type your message here.</textarea>
+                                <textarea name="message" placeholder="Type your message here."></textarea>
                                 <div class="button-group">
                                     <button type="submit" class="btn btn-primary">Submit</button>
                                 </div>
@@ -298,6 +298,13 @@
                                     <p>A coding process to convert a static design to a webpage.</p>
                                 </div>
                             </div>
+                            <div class="service-card">
+                                <div class="service-icon orange"><img src="assets/images/icon-8.png"></div>
+                                <div class="service-description">
+                                    <h4>Social Media Fullfilment</h4>
+                                    <p>Search engine optimization and social media management service.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-sm-6">
@@ -326,7 +333,14 @@
                             <div class="service-card">
                                 <div class="service-icon orange"><img src="assets/images/icon-8.png"></div>
                                 <div class="service-description">
-                                    <h4>SEO and Social Media Consultancy</h4>
+                                    <h4>SEO Consultant</h4>
+                                    <p>Search engine optimization and social media management service.</p>
+                                </div>
+                            </div>
+                            <div class="service-card">
+                                <div class="service-icon orange"><img src="assets/images/icon-8.png"></div>
+                                <div class="service-description">
+                                    <h4>Digital Marketing Management</h4>
                                     <p>Search engine optimization and social media management service.</p>
                                 </div>
                             </div>
