--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="first-screen-cards minus-margin-top">
-                            <h1>My Recent Projects</h1>
+                            <h1>My Recent Projectss</h1>
                             <p>I left happy customers behind us and also i still follow them to keep it straight. 😊</p>
                         </div>
                     </div>
